--- a/Section-01-HTML/Week-01/19-10-2023/00_alıştırma/index.html
+++ b/Section-01-HTML/Week-01/19-10-2023/00_alıştırma/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <!--İşyerinde oluşturduğum alıştırma dosyası-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alıştırma</title>
     <h1>Lorem, ipsum dolor.</h1>
-</head>
+  </head>
 
-<body>
+  <body>
     <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium animi fugit officia beatae explicabo saepe, nihil et eum aperiam sunt culpa architecto laborum sequi natus quas iste ex, deleniti facere!
-        
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium
+      animin fugit officia beatae explicabo saepe, nihil et eum aperiam sunt
+      culpa architecto laborum sequi natus quas iste ex, deleniti facere!
     </p>
-
-</body>
+    <a href="mailto:x">Mail Gönderiniz</a>
+    <br />
+    <iframe
+      width="600"
+      height="400"
+      src="https://www.youtube.com/embed/HG1fjo1HtbQ"
+      title="Ibiza Summer Mix 2022  Deep House Music"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe>
+    <br />
+    <img src="http://akrepnalan.com/nalan_imaj/s5.jpg" alt="akrep nalan" />
+  </body>
 </html>
