--- a/Section-01-HTML/Week-01/19-10-2023/02_HtmlBasics/index.html
+++ b/Section-01-HTML/Week-01/19-10-2023/02_HtmlBasics/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Derste yaptığım</title>
 </head>
 <body>
     <h1 style="background-color:rgb(60, 215, 175);">Başlık h1 size</h1>
