--- a/Section-01-HTML/Week-01/21-10-2023/04-Links/index.html
+++ b/Section-01-HTML/Week-01/21-10-2023/04-Links/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <a href="index.html">Ana Sayfa</a>
-    <a href="kurumsal.html">Kurumsal</a>
-    <a href="iletisim.html">İletişim</a>
-    <a href="hakkimizda.html">Hakkımızda</a>
-    <a href="https://www.trendyol.com" target="_blank">Trendyol</a>
-    <a href="https://picsum.photos/id/237/800/600" target="blank"
-      >Resim Getir</a
-    >
 
-    <h1>Ana sayfa</h1>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <a href="index.html">Ana Sayfa</a>
+  <a href="kurumsal.html">Kurumsal</a>
+  <a href="iletisim.html">İletişim</a>
+  <a href="hakkimizda.html">Hakkımızda</a>
+  <a href="https://www.trendyol.com" target="_blank" onclick="window.open(this.href,'newwindow')">Trendyol</a>
+  <a href="https://picsum.photos/id/237/800/600" target="blank">Resim Getir</a>
+  <div onclick="window.open('kurumsal.html','_blank','location:no')">Yeni Pencerede Aç</div>
+
+  <h1>Ana sayfa</h1>
+</body>
+
 </html>
 <!-- ÖDEV!!!!! 
 Blank yeni sekmede açması için 
 ... yeni pencerede açmak için kullanılır ???-->
+<!-- Cevap bu günümüz popüler tarayıcıları için html ile yapılmaz. -->
