gs store olayına devam

--- a/Section-01-HTML/Week-01/21-10-2023/09-Forms/index.html
+++ b/Section-01-HTML/Week-01/21-10-2023/09-Forms/index.html
@@ -79,13 +79,30 @@
         <div>
             <h3>Şehir:</h3>
             <select name="" id="">
-                <option value="">Bir Şehir Seçiniz</option>
-                <option selected>Mağara</option>
-                <option value="">Kars</option>
-                <option value="">İstanbul</option>
-                <option value="">Eskişehir</option>
-                <option value="">Ankara</option>
-                <option value="">İzmir</option>
+                <option selected>Bir Şehir Seçiniz</option>
+                <optgroup label="Doğu Anadolu" disabled>
+                    <option value="">Kars</option>
+                    <option value="">Erzurum</option>
+                    <option value="">Ağrı</option>
+                    <option value="">Ardahan</option>
+                </optgroup>
+                <optgroup label="Marmara">
+                    <option value="">Tekirdağ</option>
+                    <option value="">Kırklareli</option>
+                    <option value="">Edirne</option>
+                    <option value="">Kocaeli</option>
+                    <option value="">İstanbul</option>
+                    <option value="">Bursa</option>
+                </optgroup>
+                <optgroup label="İç Anadolu">
+                    <option value="">Eskişehir</option>
+                    <option value="">Ankara</option>
+                </optgroup>
+
+                <optgroup label="Ege">
+                    <option value="">İzmir</option>
+                </optgroup>
+
             </select>
         </div>
         <div>
