--- a/Section-01-HTML/Week-01/22-10-2023/03-BoxModel/index.html
+++ b/Section-01-HTML/Week-01/22-10-2023/03-BoxModel/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
         }
     </style>
 </head>
+
 <body>
     <!-- <a href="#">Ana Sayfa</a>
     <span>Bu Bir Span</span>
@@ -37,6 +39,26 @@
     <div class="kutu">Kutu 4</div>
     <div class="kutu">Kutu 5</div>
 
+    <div class="anadiv">
+        <div>
+            Lorem, ipsum dolor.
+        </div>
+    </div>
+    <div class="anadiv">
+        <div>
+            <p>Lorem, ipsum dolor.</p>
+        </div>
+    </div>
+    <div class="anadiv">
+        <div>
+            <p>Lorem, ipsum dolor.</p>
+        </div>
+    </div>
 
+    <fieldset>
+        <legend>deneme 1-2-3-4</legend>
+    </fieldset>
+    
 </body>
+
 </html>
