--- a/Section-01-HTML/Week-02/25-10-2023/05_gelismis_islemler/index.html
+++ b/Section-01-HTML/Week-02/25-10-2023/05_gelismis_islemler/index.html
@@ -34,113 +34,20 @@
             <h2>How it works?</h2>
         </section>
         <section>
-            <p id="p1">
-            <p id="p11">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> <p id="p12">Quae deleniti magni quis, omnis
-            atque eligendi aspernatur voluptate corporis sunt unde? Nam exercitationem facere recusandae minus eveniet
-            voluptatem facilis vitae commodi eaque maxime praesentium, dolor, eos tempore incidunt quam earum molestias
-            voluptas hic, rem dicta nesciunt. Culpa numquam dolores corporis quaerat assumenda accusantium sit veniam
-            molestiae voluptatum necessitatibus, facere dolor reiciendis, ducimus perspiciatis nihil temporibus vero.
-            Illum perspiciatis amet expedita maiores. Ea molestias quos facilis iure impedit natus deserunt vitae, quod
-            quam quas. Minima iure error ratione quisquam, dolores libero, quidem expedita, deleniti accusantium maxime
-            ad reiciendis recusandae earum quibusdam placeat beatae asperiores ex nesciunt corporis eum reprehenderit
-            perferendis animi. Ipsa perferendis quidem eveniet possimus distinctio, nisi quo quae illum dolor labore
-            deserunt ratione. Minus unde ipsum quia nemo cum quod officia quos libero voluptates repellat vero ut eius
-            similique quae perferendis velit tenetur a mollitia, quibusdam odit aperiam! Excepturi, vel?</p>
-
-            <p id="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, iusto. Velit, ut. Nihil
-                reprehenderit voluptates officiis sint, tenetur mollitia ullam aperiam! Amet expedita perferendis neque
-                asperiores? Eaque recusandae libero aliquam! Dolor neque velit quos laudantium veritatis provident
-                consectetur impedit excepturi, aliquam corrupti quis quibusdam minima maxime voluptatibus aspernatur
-                sit. Natus reprehenderit fugiat animi. Voluptas sint quo impedit reiciendis laboriosam deleniti sequi
-                ipsam tempora, velit mollitia distinctio odio sapiente quaerat sed id quae rerum a quasi pariatur
-                consectetur! Autem vitae maiores asperiores facere facilis inventore molestias nostrum, nihil
-                perferendis et, itaque a nisi doloribus iste impedit veniam, dolore sit quos unde quae praesentium. Amet
-                ipsam cumque autem cupiditate, vero nemo consectetur perspiciatis dignissimos quas est. Deleniti sunt
-                aliquid soluta illo? Sunt reprehenderit ipsam architecto maxime quisquam veniam harum sint, rerum quas
-                odio animi, autem velit at, cum quos rem vel corporis id eveniet ab. Porro velit consequatur totam animi
-                eum sint temporibus tempora. Quod cumque adipisci beatae repellat at itaque facilis et molestiae est
-                porro doloribus tempora, in perspiciatis ex dolorum ipsam laboriosam odit aspernatur accusamus, eum
-                necessitatibus error iusto? Ea, accusantium tenetur? Officiis nam consectetur dicta, dolorem eum commodi
-                provident distinctio dignissimos reiciendis iusto sint laboriosam asperiores at magnam debitis unde ipsa
-                laudantium quasi beatae nihil eius eaque odit quidem. Enim debitis consequuntur corrupti sequi. Quod nam
-                excepturi suscipit, dolor ratione esse recusandae reprehenderit repellat laudantium fuga eius molestias
-                praesentium earum autem obcaecati itaque consectetur aperiam maiores mollitia alias. Magni obcaecati
-                facilis velit quasi fuga quas tenetur reiciendis id molestiae.</p>
+            <p id="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quidem quisquam molestias, quam
+                itaque
+                assumenda eligendi mollitia aliquam facilis dolorem voluptatum dolor accusamus nostrum incidunt at
+                voluptates sit expedita provident. Nam ratione odit, repudiandae necessitatibus sint qui ipsa quis error
+                velit veritatis quod sit libero, alias eum vitae facere, laudantium numquam soluta asperiores dolorem?
+                Tempore, officiis! Ipsum eius pariatur adipisci, aperiam dolor cum eligendi ut, sit quas repellat
+                corrupti? Hic architecto totam, fugit eum deserunt blanditiis optio dignissimos fugiat corporis?</p>
         </section>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam officia placeat, autem, alias velit optio
-            obcaecati quos laborum earum blanditiis nam ipsum voluptas possimus doloremque deserunt dignissimos! Optio
-            ea consectetur soluta, error minus perspiciatis autem sequi voluptate doloribus commodi hic, illum rem esse
-            ad iure neque facere. Saepe sint, deleniti perspiciatis eligendi earum incidunt dolores fugit expedita, ad
-            nemo architecto totam autem molestiae quas aut distinctio rerum ex inventore quis. Eaque, illo, ad unde
-            aliquid expedita enim porro quaerat nisi saepe ex eveniet quam accusantium corrupti. Ex explicabo magnam
-            consequatur ipsam laboriosam ipsa quaerat esse eaque saepe omnis inventore, tenetur enim aliquid odio.
-            Minus, dolorum adipisci modi nemo atque dolore explicabo illum aliquid? Nam non necessitatibus ipsam quia
-            corporis porro exercitationem ullam autem. A, necessitatibus. Ipsum optio rem ratione ullam necessitatibus.
-            Sunt quidem itaque rerum aut sit blanditiis at sequi, debitis dolores libero praesentium est magnam.
-            Similique et ab labore iure odit excepturi a iste culpa? Quasi, tempora. Amet nulla asperiores porro tenetur
-            debitis at eum consequuntur vero totam quod in quisquam rerum, impedit earum accusantium unde dolores nam
-            culpa quos sint quam a tempore delectus quidem? Adipisci quam veniam iure nulla ipsam, esse animi laborum
-            natus, neque modi autem molestiae? Obcaecati accusantium iste at quam dolorum quaerat unde non, explicabo
-            asperiores nesciunt illo ex inventore, dolore voluptatibus sapiente perspiciatis voluptates veniam doloribus
-            dolorem voluptate! Aspernatur minima dolores delectus esse exercitationem deserunt modi autem repellendus
-            laboriosam. Eligendi veniam repellat aut quidem recusandae error numquam ut. Omnis nihil accusamus
-            voluptatibus, fugiat dolores eveniet laudantium. Nisi repellat, porro similique tempore non nostrum minima
-            deleniti voluptates possimus a dignissimos culpa eum itaque veritatis aut! Libero, quo excepturi aliquid
-            consectetur sit error illum dicta corrupti nostrum consequatur cum optio, porro cupiditate dolorem dolores
-            impedit veritatis repellendus. Aspernatur doloremque sit facilis dolor quod illo nulla, perspiciatis
-            nostrum. Pariatur debitis cumque aperiam sit provident, soluta voluptate? Vitae, obcaecati. Provident totam
-            iusto doloremque quisquam eveniet saepe accusantium voluptatem ratione tenetur reprehenderit aliquid
-            laboriosam aut, illo possimus perferendis eligendi dolor iste autem corporis assumenda deserunt iure
-            aliquam. Praesentium delectus, suscipit exercitationem ullam deserunt sapiente est mollitia qui fugit optio
-            doloribus architecto rerum possimus corrupti blanditiis commodi quam, labore earum quibusdam quas ad quos et
-            aliquid? Commodi quae corrupti error deserunt nulla molestiae sequi fugiat dolor. Quasi, iure reprehenderit
-            dignissimos esse quas architecto eveniet non, distinctio temporibus enim aliquam dicta, sint libero est ut!
-            Consequuntur quam quia tenetur earum quas accusantium totam, dolorem quidem deleniti! Nemo pariatur soluta
-            suscipit, magni labore quos porro, omnis obcaecati doloribus ad cupiditate? At labore facere saepe quis
-            veniam, quidem tenetur tempore ea numquam, autem eum in ipsa alias possimus officiis officia minima maiores
-            repellat ab. Ullam facilis doloremque cumque in ipsa quibusdam, exercitationem doloribus autem sint, debitis
-            explicabo? Quam sunt repellat reiciendis, obcaecati aut architecto similique culpa laborum, id omnis
-            repellendus explicabo enim. Quibusdam sequi consequatur veritatis voluptatibus voluptas explicabo iure,
-            natus doloremque totam fugit assumenda dignissimos. Beatae reiciendis, accusantium ut aspernatur iure soluta
-            hic aperiam neque aut eveniet suscipit doloribus amet blanditiis repudiandae sint. Aliquid vel, tenetur
-            quaerat dolor quam omnis velit, adipisci, reiciendis quos commodi perspiciatis laborum eos fugit illo
-            impedit provident? Ab deserunt assumenda, non quos temporibus dolorem vel atque quod ex, eum debitis
-            molestias culpa! Officiis ipsam optio, qui odit animi, assumenda libero laboriosam consequuntur veritatis
-            commodi recusandae? Nesciunt libero sapiente sequi, vel ullam, dolorum iusto animi similique impedit alias
-            omnis? Quis voluptatum nobis omnis reiciendis nam quam perspiciatis quo, at, fugiat, molestiae ut.
-            Asperiores hic magnam molestias inventore nobis quidem in est itaque eligendi cupiditate? Enim officia
-            molestiae veritatis a minus atque ex quo tempore assumenda temporibus. Explicabo iste repellendus iure odit
-            eius error quos esse voluptates quis quibusdam facilis impedit est nisi, ad pariatur vel placeat ipsa hic
-            aliquid. Ipsum aliquid iusto dolorum quaerat nesciunt, dignissimos, iure et unde quasi eum suscipit harum ad
-            consequuntur? Dicta veniam ea eius suscipit, facilis, doloremque architecto voluptatum voluptas, modi
-            repudiandae a fuga! Incidunt earum, sed et consequuntur laboriosam delectus iure ex omnis dolorum alias
-            voluptatibus ad aperiam nesciunt dolorem illum sunt a nulla aliquid aspernatur, iste eveniet ipsum quae
-            perferendis amet. Quibusdam magnam soluta incidunt facere exercitationem beatae? In expedita magni saepe
-            ducimus quis possimus ipsam voluptatum ex dolorum illo rem cupiditate fuga vel commodi illum beatae,
-            voluptas molestiae itaque exercitationem laboriosam debitis quidem quam? Incidunt, tempore! Ipsum, fugit
-            autem corporis distinctio magni totam in, deserunt, minus enim accusantium maiores sint quaerat saepe
-            pariatur provident eos. Perferendis dicta vel autem accusamus! Architecto magni accusamus, rerum maxime
-            ipsum sapiente culpa asperiores. Omnis quae tenetur quia, ea sapiente debitis, repellendus amet soluta quis
-            quo quam veritatis, ratione sequi cupiditate obcaecati. Ex dicta, dolor tenetur porro voluptates odit
-            laudantium nisi distinctio, illo provident iusto incidunt fugit dolores nam eveniet molestiae sapiente nobis
-            tempore, voluptatum sed dolorum officiis est fuga temporibus. Hic cupiditate ab similique rerum earum
-            tempora, a expedita temporibus dolores. Eos nobis odit dolorum, temporibus consequatur numquam laborum
-            similique rem ratione, porro, hic eaque autem eius tempora error a soluta doloremque? Sit aspernatur vero
-            accusantium nam sed voluptas. Explicabo totam asperiores blanditiis error ut neque quae ipsum quaerat earum,
-            saepe minima dolore accusantium dicta fugit eos quos animi sit dolorem. Recusandae ex magnam maxime aut
-            praesentium corporis placeat debitis perferendis, eos nemo mollitia labore architecto voluptate ullam
-            nostrum quia veniam eius numquam commodi inventore blanditiis, dolore impedit hic? Ullam non quasi
-            distinctio laudantium veritatis corrupti magnam ducimus a consequuntur tempora voluptatem soluta et culpa
-            expedita quidem placeat quaerat aut numquam, exercitationem, animi accusantium nostrum iusto? Maxime hic
-            odio saepe illum molestias? Laudantium qui veritatis doloribus optio iste expedita voluptate placeat porro
-            quidem exercitationem. Minima ipsum tenetur repellendus deserunt quaerat sit dolor maiores, eius dicta
-            repellat aperiam suscipit? Facere itaque nostrum distinctio cum saepe cupiditate illum ratione aperiam,
-            excepturi error voluptatibus quam commodi reiciendis necessitatibus consequuntur expedita, praesentium fuga
-            placeat repellat culpa suscipit! Alias animi blanditiis, necessitatibus delectus quaerat quos impedit
-            obcaecati nam ipsam itaque culpa quia? Voluptatum consequatur voluptatem, mollitia ut incidunt modi sed
+            obcaecati rat sit dolor maiores, eius dicta
+            repellat aconsequatur voluptatem, mollitia ut incidunt modi sed
             similique deserunt inventore temporibus itaque, neque, alias veritatis?</p>
-            <div class="m-5">Deneme yazısı</div>
-        </main>
+        <div class="m-5">Deneme yazısı</div>
+    </main>
 </body>
 
 </html>
