1 kasım ders sonu

--- a/Section-02-CSS/Week-03/01_11_2023/06_General/index.html
+++ b/Section-02-CSS/Week-03/01_11_2023/06_General/index.html
@@ -28,9 +28,37 @@
         </div>
 
         <div div class="main">
+
             <div id="show-case">
-                <h2>Welcome</h2>
-                <h3>Millions of Movies! Explore Now.</h3>
+                <div id="show-case-content">
+                    <h2>Welcome</h2>
+                    <h3>Millions of Movies! Explore Now.</h3>
+                </div>
+            </div>
+            <div class="how-it-works">
+                <div class="how-it-works-item">
+                    <h2>Choose a Plan</h2>
+                    <i class="fa-regular fa-circle-check"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis rerum optio animi iste
+                        distinctio sapiente quidem repudiandae assumenda ab eveniet, veritatis nemo incidunt
+                        voluptatibus mollitia ipsam id facilis. Sint?</p>
+                </div>
+                <div class="how-it-works-item">
+                    <h2>Register</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis rerum optio animi iste
+                        distinctio sapiente
+                        quidem repudiandae assumenda ab eveniet, veritatis nemo incidunt voluptatibus mollitia ipsam id
+                        facilis. Sint?
+                    </p>
+                </div>
+                <div class="how-it-works-item">
+                    <h2>Enjoy!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis rerum optio animi iste
+                        distinctio sapiente
+                        quidem repudiandae assumenda ab eveniet, veritatis nemo incidunt voluptatibus mollitia ipsam id
+                        facilis. Sint?
+                    </p>
+                </div>
             </div>
         </div>
         <div class="footer">
