2 kasım ders sonu

--- a/Section-02-CSS/Week-03/01_11_2023/06_General/index.html
+++ b/Section-02-CSS/Week-03/01_11_2023/06_General/index.html
@@ -27,7 +27,7 @@
             </nav>
         </div>
 
-        <div div class="main">
+        <div class="main">
 
             <div id="show-case">
                 <div id="show-case-content">
@@ -45,25 +45,29 @@
                 </div>
                 <div class="how-it-works-item">
                     <h2>Register</h2>
+                    <i class="fa-regular fa-address-card"></i>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis rerum optio animi iste
                         distinctio sapiente
-                        quidem repudiandae assumenda ab eveniet, veritatis nemo incidunt voluptatibus mollitia ipsam id
+                        quidem repudiandae assumenda ab eveniet, veritatis nemo incidunt voluptatibus mollitia ipsam
+                        id
                         facilis. Sint?
                     </p>
                 </div>
                 <div class="how-it-works-item">
-                    <h2>Enjoy!</h2>
+                    <h2>Enjoy !</h2>
+                    <i class="fa-regular fa-face-smile"></i>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis rerum optio animi iste
-                        distinctio sapiente
-                        quidem repudiandae assumenda ab eveniet, veritatis nemo incidunt voluptatibus mollitia ipsam id
-                        facilis. Sint?
+                        distinctio sapiente quidem repudiandae assumenda ab eveniet, veritatis nemo incidunt
+                        voluptatibus mollitia ipsam id facilis. Sint?
                     </p>
                 </div>
             </div>
         </div>
+
         <div class="footer">
             Footer
         </div>
+
     </div>
 </body>
 
