ders sonu 21 kasim

--- a/Section-04-Javascript/Week-05/19-11-2023/17-TodoApp/index.html
+++ b/Section-04-Javascript/Week-05/19-11-2023/17-TodoApp/index.html
@@ -19,7 +19,8 @@
                     <div class="card-body mt-1">
                         <form>
                             <div class="input-group">
-                                <input type="text" id="txt-task-description" class="form-control">
+                                <input type="text"
+                                    id="txt-task-description" class="form-control">
                                 <button type="submit" class="btn btn-success" id="btn-add-task"><i
                                         class="fa-solid fa-plus"></i></button>
                             </div>
