23 kasım ders sonu

--- a/Section-04-Javascript/Week-06/23-11-2023/19-calculator/index.html
+++ b/Section-04-Javascript/Week-06/23-11-2023/19-calculator/index.html
@@ -17,7 +17,7 @@
                     <button type="button" class="operator" value="+">+</button>
                     <button type="button" class="operator" value="-">-</button>
                     <button id="carpi" type="button" class="operator" value="*">&times;</button>
-                    <button id="bolme" type="button" class="operator" value="+">&divide;</button>
+                    <button id="bolme" type="button" class="operator" value="/">&divide;</button>
                     <button type="button" value="7">7</button>
                     <button type="button" value="8">8</button>
                     <button type="button" value="9">9</button>
