--- a/Section-05-Modern-Js-React/Week-08/Todo-app-purejs-telafi/index.html
+++ b/Section-05-Modern-Js-React/Week-08/Todo-app-purejs-telafi/index.html
@@ -32,24 +32,13 @@
                     <span role="button" id="completed">Completed</span>
                 </div>
                 <div>
-                    <button onclick="" class="btn btn-danger btn-sm">Clear All</button>
+                    <button onclick="clearAll()" class="btn btn-danger btn-sm">Clear All</button>
                 </div>
             </div>
         </div>
         <!-- burasıda görevlerin gözükeceği yer -->
         <div class="card mt-3">
             <ul class="list-group p-2" id="task-list">
-                <li class="list-group-item " id="1">
-                    <div class="form-check form-switch d-flex justify-content-between align-items-center">
-                        <input class="form-check-input" type="checkbox" role="switch" id="switchCompleted" checked>
-                        <div class="input-group">
-                            <input type="text" class="form-control" value="Örnek Görev 1" disabled>
-                            <button onclick="" class="btn btn-warning" id="1"><i
-                                    class="fa-solid fa-pen-to-square"></i></button>
-                            <button onclick="" class="btn btn-danger" id="1"><i class="fa-solid fa-trash"></i></button>
-                        </div>
-                    </div>
-                </li>
             </ul>
         </div>
     </div>
