MVC'ye geçildi vscode üzerinden consol app ve mvc oluşturuldu

--- a/Section-02-CSS/Week_02/26-10-2023/06_GENERAL/index.html
+++ b/Section-02-CSS/Week_02/26-10-2023/06_GENERAL/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
+ <div>
+    <div style="background-color: crimson; width: 300px; margin: 0; border: 5px solid black; padding: 0px;">
+        ASD
 
+    </div>
+ </div>
+ <script src="index.js"></script>
 </body>
 
 </html>
